fixed spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@
 }
 
 #buttons {
-    margin-left: 80vw;
+    margin-left: 75vw;
 }
 
 .pg-link-btn {
